[metadata]
name = cxpp-outbound-python-sdk
version = 0.0.1
description = CX Partner Portal APIs
author = API Support
author_email = partner-support@cisco.com
readme = README.md
license = Apache 2.0 
url = https://github.com/CXEPI/px-cloud-python-sdk

[options]
install_requires = 
    python_version >= "3.7"
package_dir=
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src

classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent



